--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SIGMANEST;Database=MyTasks_WebAPI;User Id=DOTNET;Password=Shark1445NE$T;TrustServerCertificate=True;"
+  },
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
