Changes made in order to run updating and connection to database

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SIGMANEST;Database=MyTasks_WebAPI;User Id=DOTNET2;Password=Shark1445NE$T;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
