--- a/MyTasks_WebAPI.csproj
+++ b/MyTasks_WebAPI.csproj
@@ -18,7 +18,8 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Data\Migrations\" />
+
+    <Folder Include="Models\Data\Migrations\" />
   </ItemGroup>
 
 </Project>
