Added AuthenticationController with Register and Login actions. Applied JWT authorization using Bearer scheme

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWTSettings": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "64A63153-11C1-4919-9133-EFAF99A9B456",
+    "ValidateIssuer": true,
+    "ValidIssuer": "https://localhost:7068",
+    "ValidateAudience": true,
+    "ValidAudience": "https://localhost:7069",
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true
+  },
   "AllowedHosts": "*"
 }
