Fixed JWT Bearer authentication

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,10 +12,11 @@
     "ValidateIssuerSigningKey": true,
     "IssuerSigningKey": "64A63153-11C1-4919-9133-EFAF99A9B456",
     "ValidateIssuer": true,
-    "ValidIssuer": "https://localhost:7068",
+    "ValidIssuer": "https://localhost:7067",
     "ValidateAudience": true,
-    "ValidAudience": "https://localhost:7069",
+    "ValidAudience": "https://localhost:7067",
     "RequireExpirationTime": true,
+    "DurationInMinutes": 120,
     "ValidateLifetime": true
   },
   "AllowedHosts": "*"
