Transfer essential data to MyTasks_WebAPI.Core in order tu use that in Xamarin project

--- a/MyTasks_WebAPI.csproj
+++ b/MyTasks_WebAPI.csproj
@@ -27,4 +27,8 @@
     <Folder Include="Models\Data\Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyTasks_WebAPI.Core\MyTasks_WebAPI.Core.csproj" />
+  </ItemGroup>
+
 </Project>
