Separated authentication types according to setting from appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,5 +19,12 @@
     "DurationInMinutes": 120,
     "ValidateLifetime": true
   },
+  "AuthenticationSettings": {
+    "IsJWTBearerTokenActive": false,
+    "IsSPABearerTokenActive": true
+  },
+  "SPABearerTokenOptions": {
+    "IsUsingCookies": false
+  },
   "AllowedHosts": "*"
 }
