Added logging using Serilog

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,22 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SIGMANEST;Database=MyTasks_WebAPI;User Id=DOTNET2;Password=Shark1445NE$T;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -20,11 +36,11 @@
     "ValidateLifetime": true
   },
   "AuthenticationSettings": {
-    "IsJWTBearerTokenActive": false,
-    "IsSPABearerTokenActive": true
+    "IsJWTBearerTokenActive": true,
+    "IsSPABearerTokenActive": false
   },
   "SPABearerTokenOptions": {
-    "IsUsingCookies": false
+    "IsUsingCookies": true
   },
   "AllowedHosts": "*"
 }
